Doc: Add GSoC 2O22 annoucement

--- a/readme/news/20220308-gsoc2022-start.md
+++ b/readme/news/20220308-gsoc2022-start.md
@@ -8,7 +8,7 @@ For the third year, Joplin has been selected as a Google Summer of Code mentor o
 
 Our full idea list is available here: [GSoC 2022 idea list](https://joplinapp.org/gsoc2022/ideas/)
 
-Today starts the community bonding period (from March 8 to April 4). In the coming month, contributors will start getting involved in the community, start looking at Joplin's source code, perhaps work on fixing bugs or implement small features to get familiar with the source code, and to show us their skills.
+In the coming month, contributors will start getting involved in the forum and start discussing project ideas with the mentors and community. It's also a good time to start looking at Joplin's source code, perhaps work on fixing bugs or implement small features to get familiar with the source code, and to show us your skills.
 
 One difference with previous years is that anyone, not just students, are allowed to participate. 
 
