--- a/packages/tools/locales/fi_FI.po
+++ b/packages/tools/locales/fi_FI.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Joplin-CLI 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2022-03-26\n"
-"Last-Translator: mrkaato\n"
+"PO-Revision-Date: 2022-04-15\n"
+"Last-Translator: mrkaato0\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
